[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/stat_popup.gd" type="Script" id=2]

[node name="StatPopup" type="Panel"]
margin_left = 313.0
margin_top = 307.0
margin_right = 633.0
margin_bottom = 479.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 334.0
margin_bottom = 167.0
mouse_filter = 2

[node name="NameHealth" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 324.0
margin_bottom = 37.0
mouse_filter = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/NameHealth"]
unique_name_in_owner = true
margin_right = 37.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%s"

[node name="Space" type="Control" parent="MarginContainer/VBoxContainer/NameHealth"]
margin_left = 41.0
margin_right = 153.0
margin_bottom = 37.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Health" type="Label" parent="MarginContainer/VBoxContainer/NameHealth"]
unique_name_in_owner = true
margin_left = 157.0
margin_right = 324.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HP%s: %d/%d"
align = 2

[node name="Attacks" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 324.0
margin_bottom = 78.0
mouse_filter = 2

[node name="Attack" type="Label" parent="MarginContainer/VBoxContainer/Attacks"]
unique_name_in_owner = true
margin_right = 137.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ATK%s: %d"

[node name="Space" type="Control" parent="MarginContainer/VBoxContainer/Attacks"]
margin_left = 141.0
margin_right = 162.0
margin_bottom = 37.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="MagicAttack" type="Label" parent="MarginContainer/VBoxContainer/Attacks"]
unique_name_in_owner = true
margin_left = 166.0
margin_right = 324.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MATK%s: %d"
align = 2

[node name="Defences" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 324.0
margin_bottom = 119.0
mouse_filter = 2

[node name="Defence" type="Label" parent="MarginContainer/VBoxContainer/Defences"]
unique_name_in_owner = true
margin_right = 135.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DEF%s: %d"

[node name="Space" type="Control" parent="MarginContainer/VBoxContainer/Defences"]
margin_left = 139.0
margin_right = 164.0
margin_bottom = 37.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="MagicDefence" type="Label" parent="MarginContainer/VBoxContainer/Defences"]
unique_name_in_owner = true
margin_left = 168.0
margin_right = 324.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MDEF%s: %d"
align = 2

[node name="EvasionCritical" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 123.0
margin_right = 324.0
margin_bottom = 160.0
mouse_filter = 2

[node name="Evasion" type="Label" parent="MarginContainer/VBoxContainer/EvasionCritical"]
unique_name_in_owner = true
margin_right = 177.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Evasion%s: %d"

[node name="Space" type="Control" parent="MarginContainer/VBoxContainer/EvasionCritical"]
margin_left = 181.0
margin_right = 181.0
margin_bottom = 37.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Critical" type="Label" parent="MarginContainer/VBoxContainer/EvasionCritical"]
unique_name_in_owner = true
margin_left = 185.0
margin_right = 324.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Crit%s: %d"
align = 2
